쿠버네티스 프로젝트/site/ingress/site01-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site01-app
  namespace: site
  labels:
    app: site01-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site01-app
  template:
    metadata:
      labels:
        app: site01-app
    spec:
      containers:
      - name: site01-app
        image: qorhvma9/site:01
        ports:
        - containerPort: 5000
