쿠버네티스 프로젝트/site/ingress/site02-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site02-app
  namespace: site
  labels:
    app: site02-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site02-app
  template:
    metadata:
      labels:
        app: site02-app
    spec:
      containers:
      - name: site02-app
        image: qorhvma9/site:02
        ports:
        - containerPort: 5000
