쿠버네티스 프로젝트/site/ingress/site02-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: site02-svc
  namespace: site
spec:
  type: ClusterIP
  selector:
    app: site02-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
