쿠버네티스 프로젝트/site/ingress/ingress-site.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-web
  namespace: site
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: site01-svc
      port:
        number: 80
  rules:
  - host: site01.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: site01-svc
            port:
              number: 80
  - host: site02.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: site02-svc
            port:
              number: 80
  - host: site03.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: site03-svc
            port:
              number: 80
